--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "jsdom": "^15.2.0",
+    "mongoose": "^5.7.10",
     "nodemon": "^1.19.4"
   }
 }
