--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsdom": "^15.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.10",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
